Note this commit may be reversed, it is primarily to allow other developers to participate in my recent experiments utilising the compiler options source=5 and target=jsr14 and relates to River-334
This commit also contains code relevant to River-323 to provide concurrency to DynamicPolicyProvider, additional packages and junit tests have been included.

git-svn-id: https://svn.apache.org/repos/asf/incubator/river/jtsk/trunk@928394 13f79535-47bb-0310-9956-ffa450edef68